# django-models

./: .gitignore  README.md  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snacks/: models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/: base.html  snack_detail.html  snack_list.html
